<resources>
    <string name="app_name">PHALANXv2</string>
    <string name="actTitle_PHA_Calc">PHA:LANX(Ca)</string>
    <string name="actTitle_PHA_Test">PHA:LANX(Testing)</string>
    <string name="actTitle_PHA_Sudoku">PHA:LANX(Su)</string>
    <string name="actTitle_PHA_MM">PHA:LANX(MM)</string>
    <string name="actTitle_PHA_Db_Handler">PHA:LANX(Db)</string>
    <string name="actTitle_PHA_Db">PHA:LANX(Db)</string>
    <string name="actTitle_PHA_Voice">PHA:LANX(Vo)</string>
    <string name="actTitle_PHA_Db_Data">PHA:LANX(Db:Data)</string>
    <string name="actTitle_PHA_Search">PHA:LANX(Se)</string>
    <string name="actTitle_PHA_Search_Display">PHA:LANX(Se:Display)</string>
    <string name="actTitle_PHA_Sudoku_About">PHA:LANX(Su:About)</string>
    <string name="actTitle_Workbench">Workbench</string>
    <string name="actTitle_PHA_Sudoku_Settings">PHA:LANX(Su:Settings)</string>
    <string name="mainScreenTitle">PHA:LANX</string>
    <string name="title_activity_pha_sudoku_main">PHA:LANX(Su)</string>
    <string name="title_activity_sudoku_about">PHA:LANX(Su) - About</string>
    <string name="title_activity_phay_search_main">PHA:LANX(Se)</string>
    <string name="title_activity_phay_search_display">PHA:LANX(Se)</string>
    <string name="title_activity_pha_sudoku_settings">PHA_SudokuSettings</string>
    <string name="title_activity_pha_sudoku_game">PHA:LANX(Su)</string>
    <string name="title_activity_pha_tilt_test">PHA_TiltTest</string>
    <string name="title_activity_pha_tilt_scroll_test">PHA_TiltScrollTest</string>
    <string name="title_activity_pha_memo_main">PHA_MemoMain</string>
    <string name="title_activity_pha_memo_entry_main">PHA_MemoEntryMain</string>
    <string name="title_activity_pha_reminder">PHA_Reminder</string>
    <string name="title_activity_pha_voice">PHA_Voice</string>
    <string name="actTitle_PHA_Converter">PHA_Converter</string>
    <string name="title_activity_pha_sensor_test">PHA_SensorTest</string>
    <string name="title_activity_pha_map">PHA_Map</string>
    <string name="actTitle_PHA_Reminder_List">PHA_Reminder_List</string>
    <string name="btn_lbl_LoadToolList">LOAD TOOLS</string>
    <string name="btn_lbl_AddTool">ADD</string>
    <string name="btn_lbl_FindTool">FIND</string>
    <string name="btn_lbl_DeleteTool">DELETE</string>
    <string name="btn_lbl_UpdateTool">UPDATE</string>
    <string name="btn_mm_00_text">SUDOKU</string>
    <string name="btn_mm_01_text">REMINDERS</string>
    <string name="btn_mm_02_text">SENSOR TEST</string>
    <string name="btn_mm_03_text">CALCULATOR</string>
    <string name="btn_mm_04_text">TILT TEST</string>
    <string name="btn_mm_05_text">TILT SCROLL TEST</string>
    <string name="btn_mm_06_text">Db</string>
    <string name="btn_mm_07_text">VOICE TEST</string>
    <string name="btn_mm_08_text">CONVERTER</string>
    <string name="btn_mm_09_text">WORKBENCH</string>
    <string name="button10Text">TEST</string>
    <string name="button11Text">TEST</string>
    <string name="button12Text">TEST</string>
    <string name="button13Text">TEST</string>
    <string name="button14Text">TEST</string>
    <string name="button15Text">TEST</string>
    <string name="button16Text">TEST</string>
    <string name="et_entry_null">null ¯\_(ツ)_/¯</string>
    <string name="et_entry_null_body">This entry has been found to be null.</string>
    <string name="tv_mm_00">Main Menu Text View</string>
    <string name="tvMain_toolDeleted">Tool Deleted!</string>
    <string name="tvMain_noSuchEntry">xx No Entry Exists xx</string>
    <string name="prefs_dev_mode_key">dev_mode</string>
    <string name="prefs_dev_mode_message">Check to enable developer mode.</string>
    <string name="prefs_dev_mode_summary">Turn all options and messages on.</string>
    <string name="prefs_dev_mode_dialog_title">Turn on Dev Mode</string>
    <string name="prefs_dev_mode_title">Developer Mode</string>
    <string name="prefs_tilt_scroll_key">tilt_scroll</string>
    <string name="prefs_tilt_scroll_message">Check to enable tilt scrolling.</string>
    <string name="prefs_tilt_scroll_summary">Enables tilt scrolling option.</string>
    <string name="prefs_tilt_scroll_dialog_title">Turn on Scroll Tilt</string>
    <string name="prefs_tilt_scroll_title">Scroll Tilt</string>
    <string name="prefs_tilt_scroll_up_key">tilt_scroll_up</string>
    <string name="prefs_tilt_scroll_up_message">Tilt scrolling (down) variable.</string>
    <string name="prefs_tilt_scroll_up_summary">Enter a value to bind the tilt scroll (UP) to</string>
    <string name="prefs_tilt_scroll_up_dialog_title">Scrolling Ceiling</string>
    <string name="prefs_tilt_scroll_up_title">Tilt Up Value</string>
    <string name="prefs_tilt_scroll_down_key">tilt_scroll_down</string>
    <string name="prefs_tilt_scroll_down_message">Tilt scrolling (down) variable.</string>
    <string name="prefs_tilt_scroll_down_summary">Enter a value to bind the tilt scroll (DOWN) to</string>
    <string name="prefs_tilt_scroll_down_dialog_title">Scrolling floor</string>
    <string name="prefs_tilt_scroll_down_title">Tilt Down Value</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_title">Default Reminder Time</string>
    <string name="pref_default_time_from_now_summary">Sets the default time for a reminder.</string>
    <string name="pref_default_time_from_now_message">The default time from now (in minutes) that a new reminder should be set to.</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_task_defaults_title">Task Title Default</string>
    <string name="pref_category_task_defaults_key">task_default_category</string>
    <string name="pref_task_title_message">The default title for a reminder</string>
    <string name="pref_task_title_title">Default Reminder Title</string>
    <string name="pref_task_title_key">default_reminder_title</string>
    <string name="pref_task_title_summary">Default title for reminders.</string>
    <string name="pref_task_title_dialog_title">Default Reminder Title</string>
    <string name="menu_opt_1">Reminder</string>
    <string name="menu_opt_2">Search</string>
    <string name="menu_opt_3">Search</string>
    <string name="menu_opt_4">Search</string>
    <string name="menu_opt_5">Search</string>
    <string name="menu_opt_6">Search</string>
    <string name="menu_action_settings">SETTINGS</string>
    <string name="menu_action_listTools">Show All</string>
    <string name="menu_action_addTool">+Tool</string>
    <string name="menu_action_searchTool">Search</string>
    <string name="lp_menu_search">Search item</string>
    <string name="lp_menu_delete">Delete item</string>
    <string name="action_settings">Settings</string>
    <string name="PHA_VoiceRecord">RECORD</string>
    <string name="PHA_VoiceTTS">TTS</string>
    <string name="PHA_Test_Update">UPDATE</string>
    <string name="PHA_Test_Show">VALUES</string>
    <string name="PHA_Test_Zeros">0.0</string>
    <string name="PHA_Test_Values">Determining variables\.\.\.</string>
    <string name="PHA_MM_Title">MM TV</string>
    <string name="PHA_TestingTitle"> ** TESTS  ** </string>
    <string name="PHA_SudokuTitle">PHA:LANX(Sudoku)</string>
    <string name="PHA_CalcTitle">PHA:LANX(Calc)</string>
    <string name="PHA_SearchTitle">PHA:LANX(Search)</string>
    <string name="PHA_ResultTitle">PHA:LANX(Search:Results)</string>
    <string name="PHA_MemoTitle">PHA:LANX(Memo)</string>
    <string name="PHA_Title">PHA:LANX</string>
    <string name="empty">Empty</string>
    <string name="notifyNewTaskMessage">You Have a New Reminder</string>
    <string name="notifyNewTaskTitle">Reminders</string>
    <string name="saveConfirm">SAAAVED!!</string>
    <string name="phaySearchETxtHint">Enter your search\.\.\.</string>
    <string name="phaySearchTxt">Please enter a search and we will begin</string>
    <string name="searchIntent">searchEntry</string>
    <string name="phaySearchBtnTxt">SEARCH</string>
    <string name="pha_Description_CalcDeleteBtn">CalcClear/DeleteBtn</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="setX">set x</string>
    <string name="setY">set y</string>
    <string name="calcX"> x </string>
    <string name="calcY"> y </string>
    <string name="phaClcDP">.</string>
    <string name="phaClcZero">0</string>
    <string name="phaClcOne">1</string>
    <string name="phaClcTwo">2</string>
    <string name="phaClcThree">3</string>
    <string name="phaClcFour">4</string>
    <string name="phaClcFive">5</string>
    <string name="phaClcSix">6</string>
    <string name="phaClcSeven">7</string>
    <string name="phaClcEight">8</string>
    <string name="phaClcNine">9</string>
    <string name="phaClcDiv">/</string>
    <string name="phaClcMult">*</string>
    <string name="phaClcEqls">=</string>
    <string name="phaClcMinus">-</string>
    <string name="phaClcPlus">+</string>
    <string name="phaClcDflt">0</string>
    <string name="phaClcClearLast">CLS</string>
    <string name="phaClcClearAll">CLR</string>
    <string name="phaClcANS">ANS</string>
    <string name="inverse">1/x</string>
    <string name="square">x<sup><font size="10">2</font></sup></string>
    <string name="cube">x<sup><font size="10">3</font></sup></string>
    <string name="pow">y<sup><font size="10">x</font></sup></string>
    <string name="percent">%</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="tan">tan</string>
    <string name="log2">log<sub><font size="10">2</font></sub></string>
    <string name="log10">log<sub><font size="10">10</font></sub></string>
    <string name="acos">cos<sub><font size="10">-1</font></sub></string>
    <string name="asin">sin<sub><font size="10">-1</font></sub></string>
    <string name="atan">tan<sub><font size="10">-1</font></sub></string>
    <string name="log">log</string>
    <string name="log1p">log1p</string>
    <string name="e"><i>e</i></string>
    <string name="pi">&#x03c0;</string>
    <string name="random">rnd</string>
    <string name="sqrt">&#x221a;</string>
    <string name="hyp">hyp</string>
    <string name="loglp">loglp</string>
    <string name="hello_world">Hello world!</string>
    <string name="remsTime">Time</string>
    <string name="remsDate">Date</string>
    <string name="remsConfirm">Confirm</string>
    <string name="remsBody">Body</string>
    <string name="remsTitle">Title</string>
    <string name="reminderHint">Type reminder here.</string>
    <string name="reminderBtnTxt">ADD</string>
    <string name="memoAdd">ADD</string>
    <string name="memoClear">CLEAR</string>
    <string name="memoShow">SHOW</string>
    <string name="dbEntryName">You\.\.\.</string>
    <string name="dbEntryTitle">Title\.\.\.</string>
    <string name="dbEntryComment">Comment\.\.\.</string>
    <string name="dbEntryMemo">Memo\.\.\.</string>
    <string name="dbEntryTags">TAGS\,</string>
    <string name="phaRemindersNoRems">Empty</string>
    <string name="memoEntryBttnTxt">Save</string>
    <string name="memoShowBttnTxt">Show</string>
    <string name="dbSpinnerPrompt">Category</string>
    <string name="timeSeperator"> / </string>
    <string name="converterPrompt">Default</string>
    <string name="sudokuSettingsTitle">PHA_LANX(Su)</string>
    <string name="sudokuNoMoves">No Moves</string>
    <string name="sudokuKPTitle">Keypad</string>
    <string name="sudokuContBtnTxt">Continue</string>
    <string name="sudokuNGBtnTxt">New Game</string>
    <string name="sudokuExitBtnTxt">Exit</string>
    <string name="sudokuAboutBtnTxt">About</string>
    <string name="sudokuMainTitle">PHA:LANX(Su)</string>
</resources>