<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".PHA_TiltScrollTest">

        <TextView
            android:id="@+id/scrollUpCheckTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:nextFocusDown="@+id/scrollDownCheckTxt"
            android:text="@string/PHA_Test_Zeros" />

        <TextView
            android:id="@+id/scrollDownCheckTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scrollUpCheckTxt"
            android:layout_centerHorizontal="true"
            android:nextFocusDown="@+id/btn_mm_00"
            android:nextFocusUp="@+id/scrollUpCheckTxt"
            android:text="@string/PHA_Test_Zeros" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/tiltScreenScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#98000000"
        android:orientation="vertical"
        tools:context=".PHA_MainScreen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainScreenTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mainScreenTitle"
                android:textColor="#009999" />

            <Button
                android:id="@+id/btn_mm_00"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusDown="@+id/btn_mm_01"
                android:nextFocusUp="@+id/scrollDownCheckTxt"
                android:text="@string/btn_mm_00_text">

            </Button>

            <Button
                android:id="@+id/btn_mm_01"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusDown="@+id/btn_mm_02"
                android:nextFocusUp="@+id/btn_mm_00"
                android:text="@string/btn_mm_01_text">

            </Button>

            <Button
                android:id="@+id/btn_mm_02"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusDown="@+id/btn_mm_03"
                android:nextFocusUp="@+id/btn_mm_01"
                android:text="@string/btn_mm_02_text"></Button>

            <Button
                android:id="@+id/btn_mm_03"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusUp="@+id/btn_mm_02"
                android:text="@string/btn_mm_03_text"></Button>

            <Button
                android:id="@+id/btn_mm_04"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusUp="@+id/btn_mm_03"
                android:text="@string/btn_mm_04_text"></Button>

            <Button
                android:id="@+id/btn_mm_05"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusUp="@+id/btn_mm_04"
                android:text="@string/btn_mm_05_text"></Button>

            <Button
                android:id="@+id/btn_mm_06"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusUp="@+id/btn_mm_05"
                android:text="@string/btn_mm_06_text"></Button>

            <Button
                android:id="@+id/btn_mm_07"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusUp="@+id/btn_mm_06"
                android:text="@string/btn_mm_07_text"></Button>

            <Button
                android:id="@+id/btn_mm_08"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusUp="@+id/btn_mm_07"
                android:text="@string/btn_mm_08_text"></Button>

            <Button
                android:id="@+id/button10"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusUp="@+id/btn_mm_08"
                android:text="@string/button10Text"></Button>

            <Button
                android:id="@+id/button11"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusUp="@+id/button10"
                android:text="@string/button11Text"></Button>

            <Button
                android:id="@+id/button12"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusUp="@+id/button11"
                android:text="@string/button12Text"></Button>

            <Button
                android:id="@+id/button13"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusUp="@+id/button12"
                android:text="@string/button13Text"></Button>

            <Button
                android:id="@+id/button14"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusUp="@+id/button13"
                android:text="@string/button14Text"></Button>

            <Button
                android:id="@+id/button15"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusUp="@+id/button14"
                android:text="@string/button15Text"></Button>

            <Button
                android:id="@+id/button16"
                style="@style/PHAY_MainMenuBtn"
                android:nextFocusUp="@+id/button15"
                android:text="@string/button16Text"></Button>
        </LinearLayout>

    </ScrollView>
</LinearLayout>