<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dip"
    android:paddingRight="30dip">

     <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">

     <TextView
         android:layout_gravity="center"
         android:id="@+id/PHAY_SearchTitleTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/phaySearchTxt" />
     
     <EditText 
         android:layout_gravity="center"
         android:id="@+id/phaySearchETxt"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="@string/phaySearchETxtHint"/>

     <Button
         android:layout_gravity="center"
         android:id="@+id/searchBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/phaySearchBtnTxt" />
     </LinearLayout>
    
</ScrollView>